# Pytorch-Deep-Neural-Network-in-C-

./: CMakeLists.txt  README.md  main.cpp
